# Synthetic-Data-Generator

./: README.md  artist.py  colaborative_filtering.py  config.py  config_music.yaml  data_generator.py  pyproject.toml  song.py  stream.py  user.py  utils.py
notebooks/: Generate_Training_Data.ipynb  ml.ipynb
tests/: SyntheticData_test.py
